--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,9 +52,10 @@ layout: none
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="{{"/index.html" | prepend: site.baseurl }}" >Home</a></li>
-							<li><a href="{{"/about" | prepend: site.baseurl }}">About</a></li>
-							<li><a href="{{"/jekyll/update/2014/06/15/Welcome" | prepend: sitebaseurl }}">Blog</a></li>
+							<li><a href="http://blog.dacamden.co.uk" >Home</a></li>
+							<li><a href="http://blog.dacamden.co.uk/about">About</a></li>
+							<li><a href="http://blog.dacamden.co.uk/jekyll/update/2014/06/15/Welcome">Blog</a></li>
+              <li><a href="http://tutorials.dacamden.co.uk">Tutorials</a></li>
                             </ul>
 					</nav>
 
