--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,26 +44,18 @@
 								</header>
 								<div class="row quarter no-collapse">
 									<div class="6u">
-										<a href="" class="image full"><img src="images/pic10.jpg" alt="" /></a>
+										<a href="" class="image full"><img src="http://blog.dacamden.co.uk/images/abi.JPG" alt="" /></a>
 									</div>
 									<div class="6u">
-										<a href="" class="image full"><img src="images/pic11.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div class="row quarter no-collapse">
-									<div class="6u">
-										<a href="" class="image full"><img src="images/pic12.jpg" alt="" /></a>
-									</div>
-									<div class="6u">
-										<a href="" class="image full"><img src="images/pic13.jpg" alt="" /></a>
+										<a href="" class="image full"><img src="http://blog.dacamden.co.uk/images/henri.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div class="row quarter no-collapse">
 									<div class="6u">
-										<a href="" class="image full"><img src="images/pic14.jpg" alt="" /></a>
+										<a href="" class="image full"><img src="http://blog.dacamden.co.uk/images/leo.JPG" alt="" /></a>
 									</div>
 									<div class="6u">
-										<a href="" class="image full"><img src="images/pic15.jpg" alt="" /></a>
+										<a href="" class="image full"><img src="http://blog.dacamden.co.uk/images/theo.jpg" alt="" /></a>
 									</div>
 								</div>
 							</section>
